Add an IDResponse type
Generated from a swagger spec and use it for container exec response
